<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_ash"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:background="@drawable/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp"
            android:textSize="40dp"
            android:text="Greetings"
             />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:background="@drawable/bg_1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="80dp"
                android:text="Bonjour"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginLeft="15dp"
                android:text="@string/bonjpir"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <TextView
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="28dp"
                android:text="@string/regards_bn"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <TextView
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:text="সুপ্রভাত"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/play_btn" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text2"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
               android:layout_marginLeft="15dp"
                android:text="@string/good_day"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <TextView
                android:layout_width="88dp"
                android:layout_height="21dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="127dp"
                android:layout_marginLeft="127dp"
                android:layout_marginBottom="27dp"
                android:text="@string/good_day_bn"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <TextView

                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginBottom="2dp"
                android:text="শুভ দিন"
                android:textColor="@color/white_ash"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="9dp"
                android:background="@drawable/play_btn" />
        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text3"
                android:layout_width="132dp"
                android:layout_height="31dp"
                android:layout_marginLeft="15dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="119dp"
                android:layout_marginLeft="119dp"
                android:layout_marginBottom="26dp"
                android:text="@string/welcome_bn"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"
                android:text="স্বাগতম"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/play_btn" />
        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                android:id="@+id/text4"
                android:layout_width="194dp"
                android:layout_height="31dp"
                android:layout_marginLeft="15dp"
                android:text="@string/complimets"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="160dp"
                android:layout_marginBottom="31dp"
                android:text="@string/complimets_bn"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"
                android:text="অভিনঁদন"
                android:textColor="@color/white_ash"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/play_btn" />
        </RelativeLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:text="@string/regards"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black"
                android:textSize="23sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="13dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="13dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/play_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="110dp"
                android:layout_marginBottom="28dp"
                android:text="@string/regards_bn"
                android:textColor="@color/white_ash"
                android:textSize="17sp"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="7dp"
                android:text="শুভেচ্ছা"
                android:textColor="@color/white_ash"
                android:textSize="17sp"
                tools:visibility="visible" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>